Enhance authentication using HttpOnly cookies
